--- a/lab2/lab2/build.gradle
+++ b/lab2/lab2/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 }
 
 test {
